--- a/Views/InRecord/Index.cshtml
+++ b/Views/InRecord/Index.cshtml
@@ -5,31 +5,67 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.css" />
     <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-editable.css" />
+    <script src="~/Scripts/bootstrap-editable.min.js"></script>
+    <!--行内编辑-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.js"></script>
     <!-- Latest compiled and minified Locales -->
     <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/locale/bootstrap-table-zh-CN.min.js"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.18.1/moment-with-locales.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/bootstrap-table-editable.min.js"></script>
+    <!--最新版本会有 warning -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.js"></script>
 
     <!-- 消息提示插件：toastr.js -->
     <link href="~/Content/toastr/toastr.min.css" rel="stylesheet" />
     <script src="~/Scripts/toastr.min.js" type="text/javascript"></script>
-    <!--es6 promise-->
     <script src="~/Scripts//es6-promise.min.js "></script>
     <script src="~/Scripts//es6-promise.auto.min.js "></script>
-    <!-- 弹出框插件 -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.js"></script>
+
+    <script src="~/Scripts/common.toastr.init.js"></script>
     <script src="~/Scripts/common.form.validate.js"></script>
     <script src="~/Scripts/common.bootstraptable.init.js"></script>
-    <script src="~/Scripts/common.toastr.init.js"></script>
-
 
 </head>
 <body>
     <div class="panel-body" style="padding-bottom:0px;">
+        <button class="btn btn-info " data-toggle="collapse" data-target="#query"> 查询项</button>
+        <!-- 条件查询框 -->
+        <div id="query" class="collapse">
+            <div class="row">
+                <div>
+                    <form id="queryform" class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label" for="queryCode">夹具代码</label>
+                            <div class="col-sm-3">
+                                <input class="form-control" id="queryCode" type="text" name="queryCode" />
+                            </div>
+                            <label class="col-sm-2 control-label" for="queryName">领用人</label>
+                            <div class="col-sm-3">
+                                <input class="form-control" id="queryName" type="text" name="queryName" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label" for="StartDate">开始日期</label>
+                            <div class="col-sm-3">
+                                <input class="form-control" id="StartDate" type="text" name="StartDate" />
+                            </div>
+                            <label class="col-sm-2 control-label " for="StopDate">终止日期</label>
+                            <div class="col-sm-3">
+                                <input class="form-control" id="StopDate" type="text" name="StopDate" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <button type="button" class="col-sm-1 col-sm-offset-5 btn-primary">查询</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
         <div id="toolbar" class="btn-group">
             <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addInRecordModal">
                 <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
@@ -38,6 +74,10 @@
             <button id="btn_remove" type="button" class="btn btn-danger">
                 <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
                 <span>删除</span>
+            </button>
+            <button id="btn_edit" type="button" class="btn btn-warning">
+                <i></i>
+                <span>蓝色可编辑</span>
             </button>
         </div>
 
@@ -58,13 +98,19 @@
                             <div class=" form-group">
                                 <label class="col-xs-4 control-label" for="code">夹具代码</label>
                                 <div class="col-xs-6">
-                                    <input class="form-control" name="code" id="code" type="text">
+                                    <input class="form-control" name="code" id="code" autocomplete="off" type="text" list="codeList">
+                                    <!--code 列表-->
+                                    <datalist id="codeList">
+                                    </datalist>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-xs-4  control-label" for="seqID">夹具序列号</label>
                                 <div class="col-xs-6">
-                                    <input class="form-control" name="seqID" id="seqID" type="text">
+                                    <input class="form-control" name="seqID" id="seqID" type="text" list="seqIDList">
+                                    <!--seqIDList 列表-->
+                                    <datalist id="seqIDList">
+                                    </datalist>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -114,6 +160,24 @@
         }
 
         // inRecord 功能暂未完善
+
+        //datalist 对象
+        $(function () {
+            InitDataList("/OutRecord/GetFixtureCode", null, "codeList");
+        })
+
+
+        $("#code").change(function () {
+            var _code = $("#code").val();
+            $("#seqIDList").empty();
+            if (_code == null || _code=="") {
+                toastr.warning("请先输入夹具代码");
+                return;
+            }
+            InitDataList("/OutRecord/GetFixtureSeqIDByCode", _code, "seqIDList");
+        })
+
+
         //btn_remove 事件
         $("#btn_remove").on("click", function () {
             //获取选中数据
@@ -173,10 +237,45 @@
             field: 'Code',
             title: '夹具代码',
             visable: true,
+            // editable 初始化
+            editable: {
+                type: 'select',
+                title: '夹具代码',
+                validate: function (value) {
+                    if (!value) return '夹具代码不能为空';
+                },
+                noeditFormatter: function (value, row, index) {
+                    return diyFormatter(value, 'Code');
+                },
+                source: function (value, row, index) {
+                    return getEditableSource("/InRecord/GetFixtureCode", null)
+                }
+            }
         }, {
             field: 'SeqID',
             title: '夹具序列号',
             visable: true,
+            // editable 初始化
+            editable: {
+                type: 'select',
+                title: '夹具序列号',
+                noeditFormatter: function (value, row, index) {
+                    return diyFormatter(value, 'SeqID');
+                },
+                validate: function (value) {
+                    if (!value) return '夹具序列号不能为空';
+                },
+                source: function (value, row, index) {
+                    var data = $("#inRecordTable").bootstrapTable('getData');
+                    //2.获取所在的索引
+                    var index = $(this).parents('tr').data('index');
+                    //获取当前行数据
+                    var datas = data[index];
+                    //获取当前行的某个数据
+                    var _code = datas.Code;
+                    return getEditableSource("/InRecord/GetFixtureSeqIDByCode", _code);
+                }
+            }
 
         }, {
             field: 'RetByName',
@@ -215,7 +314,7 @@
          * table 初始化
          * */
         var TableInit = function () {
-            var inRecordTable = new Object();           
+            var inRecordTable = new Object();
             inRecordTable = BoootstrapTableInit("inRecordTable", '/InRecord/ReadInRecords', rowStyle, columns)
             return inRecordTable;
         }
