--- a/Views/OutRecord/Index.cshtml
+++ b/Views/OutRecord/Index.cshtml
@@ -5,9 +5,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-    <link href="~/Content/bootstrap-editable.css" />
+
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.css" />
     <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-editable.css" />
     <script src="~/Scripts/bootstrap-editable.min.js"></script>
     <!--行内编辑-->
     <!-- Latest compiled and minified JavaScript -->
@@ -78,7 +79,7 @@
                 </button>
                 <button id="btn_edit" type="button" class="btn btn-warning">
                     <i></i>
-                    <span>行内编辑</span>
+                    <span>蓝色可编辑</span>
                 </button>
             </div>
 
@@ -97,13 +98,21 @@
                                 <div class=" form-group">
                                     <label class="col-xs-4 control-label" for="code">夹具代码</label>
                                     <div class="col-xs-6">
-                                        <input class="form-control" name="code" id="code" type="text">
+                                        <input class="form-control" name="code" id="code" type="text" list="codeList" autocomplete="off" >
+                                        <!--code 列表-->
+                                        <datalist id="codeList">
+                                           
+                                        </datalist>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-xs-4 control-label" for="seqID">夹具序列号</label>
                                     <div class="col-xs-6">
-                                        <input class="form-control" name="seqID" id="seqID" type="text">
+                                        <input class="form-control" name="seqID" id="seqID" type="text" list="seqIDList">
+                                        <!--seqIDList 列表-->
+                                        <datalist id="seqIDList">
+
+                                        </datalist>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -151,6 +160,20 @@
             }
         }
 
+        //datalist 对象
+        $(function () {
+             InitDataList("/OutRecord/GetFixtureCode", null,"codeList");
+        })
+
+
+        $("#code").change(function () {
+            var _code = $("#code").val();
+            if (_code == null) {
+                toastr.warning("请先输入夹具代码");
+                return;
+            }
+            InitDataList("/OutRecord/GetFixtureSeqIDByCode", _code ,"seqIDList");
+        })
         //btn_remove 事件
         $("#btn_remove").on("click", function () {
 
