--- a/Views/OutRecord/Index.cshtml
+++ b/Views/OutRecord/Index.cshtml
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>领用记录管理</title>
 
     <link rel="stylesheet" href="~/Content/bootstrap-table.min.css" />
     <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="button" class="col-sm-1 col-sm-offset-5 btn-primary">查询</button>
+                            <button type="button" class="col-sm-1 col-sm-offset-5 btn-primary" onclick="query()">查询</button>
                         </div>
                     </form>
                 </div>
@@ -107,10 +107,9 @@
                                 <div class=" form-group">
                                     <label class="col-xs-4 control-label" for="code">夹具代码</label>
                                     <div class="col-xs-6">
-                                        <input class="form-control" name="code" id="code" type="text" list="codeList" autocomplete="off" >
+                                        <input class="form-control" name="code" id="code" type="text" list="codeList" autocomplete="off">
                                         <!--code 列表-->
                                         <datalist id="codeList">
-                                           
                                         </datalist>
                                     </div>
                                 </div>
@@ -120,7 +119,6 @@
                                         <input class="form-control" name="seqID" id="seqID" type="text" list="seqIDList">
                                         <!--seqIDList 列表-->
                                         <datalist id="seqIDList">
-
                                         </datalist>
                                     </div>
                                 </div>
@@ -171,7 +169,7 @@
 
         //datalist codeList 对象
         $(function () {
-             InitDataList("/OutRecord/GetFixtureCode", null,"codeList");
+            InitDataList("/OutRecord/GetFixtureCode", null, "codeList");
         })
 
         //根据code 初始化 seqIDList
@@ -181,7 +179,7 @@
                 toastr.warning("请先输入夹具代码");
                 return;
             }
-            InitDataList("/OutRecord/GetFixtureSeqIDByCode", _code ,"seqIDList");
+            InitDataList("/OutRecord/GetFixtureSeqIDByCode", _code, "seqIDList");
         })
 
 
@@ -231,6 +229,7 @@
         }
 
 
+        
         /**
          * 数据列
          * */
