--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -5,9 +5,133 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>用户管理</title>
+    <link rel="stylesheet" href="~/Content/bootstrap-table.min.css" />
+    <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-editable.css" />
+    <script src="~/Scripts/bootstrap-editable.min.js"></script>
+    <!--行内编辑-->
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="~/Scripts/bootstrap-table.min.js"></script>
+    <!-- Latest compiled and minified Locales -->
+    <script src="~/Scripts/bootstrap-table-zh-CN.min.js"></script>
+    <script src="~/Scripts/bootstrap-table-editable.min.js"></script>
+    <!-- 弹出框插件-->
+    <script src="~/Scripts/sweetalert2.min.js"></script>
+    <!-- 消息提示插件：toastr.js -->
+    <link href="~/Content/toastr/toastr.min.css" rel="stylesheet" />
+    <script src="~/Scripts/toastr.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/es6-promise.min.js "></script>
+    <script src="~/Scripts/es6-promise.auto.min.js "></script>
+    <!-- 图表插件 echarts -->
+    <script src="~/Scripts/echarts/echarts.min.js"></script>
+
+    <script src="~/Scripts/common.toastr.init.js"></script>
+    <script src="~/Scripts/common.form.validate.js"></script>
+    <script src="~/Scripts/common.bootstraptable.init.js"></script>
 </head>
 <body>
-    <div> 
+    <div class="panel-body" style="padding-bottom:0px;">
+        <div>
+            <!-- 工具栏 -->
+            <div id="toolbar" class="btn-group">
+                <button id="btn_add" type="button" class="btn btn-success" data-toggle="modal" data-target="#addOutRecordModal">
+                    <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
+                    <span>新增</span>
+                </button>
+                <button id="btn_remove" type="button" class="btn btn-danger">
+                    <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
+                    <span>删除</span>
+                </button>
+            </div>
+
+            <table id="userTable" class="table-striped">
+            </table>
+
+
+        </div>
     </div>
+    <script type="text/javascript">
+
+
+        // 行样式
+        function rowStyle(row, index) {
+            var classes = ['success', 'danger']
+            return { classes: classes[index % classes.length] };
+        }
+
+
+
+        /**
+         * 数据列
+         * */
+        var columns = [{
+            title: "全选", field: "select", checkbox: true
+        }, {
+            field: 'ID',
+            title: '编号',
+            visable: true,
+            sortable: true,
+            align: 'center',
+        }, {
+            field: 'Code',
+            title: '账户',
+            visable: true,
+            align: 'center'
+        }, {
+            field: 'Password',
+            title: '密码',
+            visable: true,
+            align: 'center',
+
+        }, {
+            field: 'Name',
+            title: '姓名',
+            visable: true,
+            align: 'center'
+        }, {
+            field: 'RoleName',
+            title: '角色',
+            visable: true,
+            align: 'center'
+        }, {
+            field: 'WorkCell',
+            title: '部门',
+            visable: true,
+            align: 'center'
+        }, {
+            field: 'Operation',
+            title: '操作',
+            //events: operationEvents,
+            align: 'center',
+            formatter: function (value, row, index) {
+                return [
+                    '<div class="btn-group">',
+                    '<div class="btn-group">',
+                    '<button id="btn_update" type="button" class="btn btn-warning" data-toggle="modal" data-target="#editOutRecordModal"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i><span></span></button>',
+                    '<button id="btn_delete" type="button" class="btn btn-danger" ><i class="glyphicon glyphicon-remove" aria-hidden="true"></i><span></span></button>',
+                    '</div>'
+                ].join(' ');
+            }
+        },]
+
+        /**
+         * table 初始化
+         * */
+        var TableInit = function () {
+            var outRecordTable = new Object();
+            outRecordTable = BoootstrapTableInit("userTable", '/User/ReadUsers', rowStyle, columns)
+            return outRecordTable;
+        }
+
+        /**
+         * 调用 TableInit
+         * */
+        $(function () {
+            //添加记录表单  设置操作人的值 且不可修改
+            $("#operationByName").attr("value", window.sessionStorage.getItem("userName"));
+            $("#operationByName").attr("readonly", "readonly");
+            var itable = TableInit();//.初始化  Table
+        });
+    </script>
 </body>
 </html>
