--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -144,7 +144,7 @@
                 Item.RoleName = row.RoleName;
                 Item.WorkCell = row.WorkCell;
                 record.push(Item);
-                confirmOrCancelDeleteData("/User/DeleteUser", "userTable", JSON.stringify(ItemIDs));
+                confirmOrCancelDeleteData("/User/DeleteUsers", "userTable", JSON.stringify(ItemIDs));
             }
         }
 
@@ -202,7 +202,7 @@
         }, {
             field: 'Operation',
             title: '操作',
-            //events: operationEvents,
+            events: operationEvents,
             align: 'center',
             formatter: function (value, row, index) {
                 return [
