--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-group mg-t20">
                     <label for="workCell">工作部门</label>   
-                  
+                    <i class="icon-sysmanager icon_font"></i>
                     <input type="text" class="login_input" name="workCell"id="workCell" placeholder="请输入工作部门" />
                 </div>
                 <div class="checkbox mg-b25">
