--- a/Views/OutRecord/Index.cshtml
+++ b/Views/OutRecord/Index.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/Content/bootstrap-table.min.css" />
     <link href="~/Content/diy-bootstraptable.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-editable.css" />
+    <link href="~/Content/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
     <script src="~/Scripts/bootstrap-editable.min.js"></script>
     <!--行内编辑-->
     <!-- Latest compiled and minified JavaScript -->
@@ -16,6 +17,10 @@
     <!-- Latest compiled and minified Locales -->
     <script src="~/Scripts/bootstrap-table-zh-CN.min.js"></script>
     <script src="~/Scripts/bootstrap-table-editable.min.js"></script>
+    <!--datetimepicker 日期选择插件-->
+    <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.zh-CN.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.fr.js"></script>
     <!-- 弹出框插件-->
     <script src="~/Scripts/sweetalert2.min.js"></script>
     <!-- 消息提示插件：toastr.js -->
@@ -160,6 +165,8 @@
         </div>
     </div>
     <script type="text/javascript">
+
+
         //添加领用记录
         function addOutRecord() {
             if (CheckFormNull("addform")) {
@@ -167,6 +174,9 @@
             }
         }
 
+        function query() {
+
+        }
         //datalist codeList 对象
         $(function () {
             InitDataList("/OutRecord/GetFixtureCode", null, "codeList");
@@ -211,7 +221,7 @@
                 Item.Date = row.UsedDate;
                 record.push(Item);
                 console.log(record);
-                UpdateRecord("/OutRecord/UpdateOutRecord", JSON.stringify(record));
+                UpdateRecord("/OutRecord/UpdateOutRecord","outRecordTable", JSON.stringify(record));
             },
             'click #btn_delete': function (e, value, row, index) {
                 var ItemIDs = new Array();
